package Model.position;

public class Buyer extends OnePlayerPos{

    /**
     * <b>constructor</b>:Constructs a buyer position
     * @param imageurl the image's URL of the position
     * @param pos the number of the position (aka tha index)
     */
    public Buyer(String imageurl, int pos) {
        super(imageurl, pos);
    }
}